# mergedna

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
notebooks/: mergedna_colab.ipynb  results.ipynb
scripts/: inspect_tokenization.py  train_toy.py
src/mergedna/: __init__.py  data.py  losses.py  merge.py  model.py  modules.py
tests/: test_data.py  test_losses.py  test_merge.py  test_model.py
