[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mergedna"
version = "0.1.0"
description = "A compact PyTorch prototype of MergeDNA with dynamic token merging."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "torch>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]
notebook = [
    "matplotlib>=3.7",
    "jupyter>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
